Fix profile photo sizing and alignment
- Fixed 200x200px with object-fit cover
- Center aligned in table cell

--- a/style.css
+++ b/style.css
@@ -43,10 +43,12 @@ ul li {
 }
 
 .profile-photo {
-    width: 100%;
-    max-width: 240px;
+    width: 200px;
+    height: 200px;
+    object-fit: cover;
     border-radius: 50%;
     display: block;
+    margin: 0 auto;
 }
 
 .paper-title {
@@ -138,7 +140,8 @@ ul li {
     }
 
     .profile-photo {
-        max-width: 180px;
+        width: 160px;
+        height: 160px;
         margin: 0 auto;
     }
 
